added media queries for devices

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
             </tbody>
           </table>
         </div>
-        <div class="col-xs-12 mt-4 col-md-6 col-lg-3">
+        <div class="col-xs-12 mt-4 col-md-6 col-lg-3 footer-headings-info">
           <div id="spa-address">
-            <h4 class="footer-headings text-center p-2">Get in touch</h4>
+            <h4 class="footer-headings-info text-center p-2">Get in touch</h4>
             <div class="contact-info-container">
               <ul>
                 <li>
