final alterations, typo correction, code cleaned

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </p>
           </div>
         </div>
-        <div class="col-12 col-md-5 d-block text-center mb-5">
+        <div class="col-12 col-md-5 d-block text-center my-4">
           <img src="assets/images/spa-humidifier.jpg" class="img-thumbnail" alt="spa-humidifier-image">
           
         </div>
