--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta name="author" content="Konstantina Strantzali">
   <meta name="description" content="Purity Spa Center is a well-equipped spa, providing luxury treatment services.">
   <meta name="keywords" content="Spa, Leisure, Massage, Sauna, Treatments, Relax, London, Putney">
-  <link rel="shortcut icon" type="image/png" href="/assets/images/logo-image.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo-image.png"/>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -119,7 +119,7 @@
               <h2 class="section-heading text-center my-5">Facial treatments</h2>
             </div>
           </div>
-          <div class="container-fluid hero-container banner-facial-massage mb-5">
+          <div class="container-fluid hero-container banner-body-treatment mb-5">
             <div class="row">
               <div class="col-12">
               </div>
